--- a/scripts/preprocess_data_notebook.ipynb
+++ b/scripts/preprocess_data_notebook.ipynb
@@ -535,11 +535,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "89af3c81-158a-4134-b007-bc3f084dadfa",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def totalCost(file_path):\n",
+    "    df = pd.read_csv(file_path, sep=',')\n",
+    "    df = df.drop(df.index[2631])\n",
+    "    def toInt(text):\n",
+    "        char = text[0]\n",
+    "        return int(char)\n",
+    "    # replacing _ years with int value\n",
+    "    df['degree_length']=df['degree_length'].fillna(0)\n",
+    "    print(df['degree_length'].head())\n",
+    "    df['degree_length'] = df['degree_length'].apply(lambda x: toInt(x))       \n",
+    "    print(df['degree_length'].head())\n",
+    "    # replacing nulls with 0\n",
+    "    df['room_and_board']=df['room_and_board'].fillna(0)\n",
+    "    # counting missing values\n",
+    "    print('-- COUNT OF MISSING VALUES:', sum(df['room_and_board'].isnull().values.ravel()))\n",
+    "            \n",
+    "    df['total_cost'] = df['in_state_total']*df['degree_length']\n",
+    "    print(df['total_cost'].head())\n",
+    "    \n",
+    "    df.to_csv(file_path, index=False)"
+   ]
   },
   {
    "cell_type": "markdown",
