Complete data preprocessing and created modelling_data

--- a/scripts/preprocess_data_notebook.ipynb
+++ b/scripts/preprocess_data_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "af255895-d7e7-4879-8c0a-c1b051c1b9f7",
    "metadata": {
     "tags": []
@@ -26,8 +26,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from scipy.stats import zscore\n",
-    "import os\n",
-    "\n",
+    "import csv\n",
     "import os\n",
     "\n",
     "# Set the default folder path\n",
@@ -105,7 +104,7 @@
     "        \n",
     "        # Remove Null values\n",
     "        print('Count of cells BEFORE dropping empty cells:', df.size, '\\n')\n",
-    "        df.dropna()\n",
+    "        df.dropna(inplace=True)\n",
     "        df.to_csv(file_path, index=False)\n",
     "        print('Count of cells AFTER dropping empty cells:', df.size, '\\n')\n",
     "        print('------------------------------------------------------------------')"
@@ -535,9 +534,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "89af3c81-158a-4134-b007-bc3f084dadfa",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def totalCost(file_path):\n",
@@ -560,6 +561,45 @@
     "    print(df['total_cost'].head())\n",
     "    \n",
     "    df.to_csv(file_path, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "314fe176-9262-40c7-bf35-1d53f03b8429",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    2 Year\n",
+      "1    4 Year\n",
+      "2    2 Year\n",
+      "3    2 Year\n",
+      "4    4 Year\n",
+      "Name: degree_length, dtype: object\n",
+      "0    2\n",
+      "1    4\n",
+      "2    2\n",
+      "3    2\n",
+      "4    4\n",
+      "Name: degree_length, dtype: int64\n",
+      "-- COUNT OF MISSING VALUES: 0\n",
+      "0      4760\n",
+      "1    180800\n",
+      "2     25204\n",
+      "3     35322\n",
+      "4    177832\n",
+      "Name: total_cost, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_path = 'data_raw/tuition_cost.csv'\n",
+    "totalCost(file_path)"
    ]
   },
   {
@@ -878,37 +918,296 @@
    "id": "7b8b50f8-2fe5-4fb5-a22b-8d90d5a7fa63",
    "metadata": {},
    "source": [
-    "Step 5: Create Diversity Index Column"
+    "Step 5: Create Diversity Index - this has been decided to be the Total Minority for each school, already indicated by the diversity_percent column"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3a5fa66d-d0f7-4f8f-ad97-adb0c7df003b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b1eaae57-b159-4978-8774-6d1c1da43093",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "cd0cafab-1913-4454-8b94-654125074ca1",
    "metadata": {},
    "source": [
-    "Step 6: Create modelling_data.csv with all features and target "
+    "Step 6: Create modelling_data.csv with all features and target \n",
+    "The Six Figure Salary Predictive Model based on School Choice (Classification)\n",
+    "Target Feature: Six Figure Salary by mid-career (True or False)\n",
+    "Descriptive features: id = School Name, Stem Percent, Total_Cost of School, Rank of School, Diversity Index "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "3930addb-88a5-4c03-b132-122902fade38",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Function Creation to make a dataset file with all features\n",
+    "def createModellingDataset(file_path):\n",
+    "    with open(file_path, 'w', newline='') as file:\n",
+    "        \n",
+    "        writer = csv.writer(file)\n",
+    "        field = ['name', 'stem_percent', 'total_cost', 'rank', 'diversity_percent','mid_career_pay','makes_six_figures']\n",
+    "        writer.writerow(field)\n",
+    "        \n",
+    "        # add the dictionary of features to the csv dataset file\n",
+    "        feature_data_dict = createFeatureDataDict()\n",
+    "        for key, value in feature_data_dict.items():\n",
+    "            stem_percent, total_cost, rank, diversity_percent, mid_career_pay, makes_six_figures = value\n",
+    "            writer.writerow([key, stem_percent, total_cost, rank, diversity_percent, mid_career_pay, makes_six_figures])\n",
+    "        print(f'{file_path} is sucessfully populated with data')\n",
+    "        \n",
+    "# Helper Function to get the feature data from each file\n",
+    "def createFeatureDataDict():\n",
+    "    # Step 1 : Get the name of each school and total_cost --> using tuition cost \n",
+    "    current_feature_path = 'data_raw/tuition_cost.csv'\n",
+    "    df = pd.read_csv(current_feature_path, sep=',')\n",
+    "    feature_data_dict = {}\n",
+    "    for index, row in df.iterrows():\n",
+    "        school_name = df.at[index, 'name']\n",
+    "        if school_name: \n",
+    "            feature_data_dict[school_name] = [0,0,0,0,0,0]\n",
+    "            feature_data_dict[school_name][1] = df.at[index, 'total_cost']\n",
+    "        \n",
+    "    # Step 2 fill in stem_percent, mid_career_pay, and makes_six_figures and rank using salary_potential.csv\n",
+    "    current_feature_path = 'data_raw/salary_potential.csv'\n",
+    "    df = pd.read_csv(current_feature_path, sep=',')\n",
+    "    for index, row in df.iterrows():\n",
+    "        school_name = df.at[index, 'name']\n",
+    "        if feature_data_dict.get(school_name, 0):\n",
+    "            feature_data_dict[school_name][0] = df.at[index, 'stem_percent']\n",
+    "            feature_data_dict[school_name][2] = df.at[index, 'rank']\n",
+    "            feature_data_dict[school_name][4] = df.at[index, 'mid_career_pay']\n",
+    "            \n",
+    "            if (feature_data_dict[school_name][4] >= 100000):\n",
+    "                feature_data_dict[school_name][5] = True\n",
+    "            else:\n",
+    "                feature_data_dict[school_name][5] = False\n",
+    "                \n",
+    "    # Step 3 fill in the diversity_percent\n",
+    "    current_feature_path = 'data_raw/diversity_school.csv'\n",
+    "    df = pd.read_csv(current_feature_path, sep=',')\n",
+    "    for index, row in df.iterrows():\n",
+    "        school_name = df.at[index, 'name']\n",
+    "        category = df.at[index, 'category']\n",
+    "        if feature_data_dict.get(school_name, 0) and (category == 'Total Minority'):\n",
+    "            feature_data_dict[school_name][3] = df.at[index, 'diversity_percent']\n",
+    "            \n",
+    "    return feature_data_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "b3e152c5-a596-4839-9b9f-110c3b16cc65",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data_processed/modelling_data.csv is sucessfully populated with data\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_path = 'data_processed/modelling_data.csv'\n",
+    "createModellingDataset(file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "a1a9db2a-509f-48c5-8307-3802fb20fc46",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "diversity_percent is updated\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Editting diversity_percent in modelling dataset to reflect total_minority\n",
+    "df = pd.read_csv('data_raw/diversity_school.csv', sep=',')\n",
+    "feature_data_dict = {}\n",
+    "for index, row in df.iterrows():\n",
+    "    school_name = df.at[index, 'name']\n",
+    "    category = df.at[index, 'category']\n",
+    "    if school_name:\n",
+    "        feature_data_dict[school_name] = 0\n",
+    "        if (category == 'Total Minority'):\n",
+    "            feature_data_dict[school_name] = df.at[index, 'diversity_percent']\n",
+    "            \n",
+    "df = pd.read_csv('data_processed/modelling_data.csv', sep=',')\n",
+    "for index, row in df.iterrows():\n",
+    "    school_name = df.at[index, 'name']\n",
+    "    if feature_data_dict.get(school_name,0):\n",
+    "        # print('Before: ', df.at[index, 'diversity_percent'], end='---')\n",
+    "        df.at[index, 'diversity_percent'] = feature_data_dict[school_name]\n",
+    "        # print('After: ', df.at[index, 'diversity_percent'], end='---')\n",
+    "    \n",
+    "df.to_csv('data_processed/modelling_data.csv', index=False)\n",
+    "print('diversity_percent is updated')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64b4dbeb-a1a6-439e-a8e8-9bb637624c3d",
+   "metadata": {},
+   "source": [
+    "Last Step: Clean up Modelling_Data CSV file: Remove all rows with at least one column == 0 in modelling_data.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "43d6f89f-9fa9-44fa-9b09-0d75c448bfa0",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Function Execution to Clean up Modelling Dataset\n",
+    "def removeNullValues(file_path):\n",
+    "    df = pd.read_csv(file_path, sep=',')\n",
+    "        \n",
+    "    print(f'Information about File: {file_path}')\n",
+    "    # Inspect File\n",
+    "    print(df.head()) # display the first few rows\n",
+    "    print(df.dtypes) # display column names and data types\n",
+    "    # check out basics of your data first\n",
+    "    \n",
+    "    df.replace(0, np.nan, inplace=True)\n",
+    "    for (name, series) in df.items():\n",
+    "        print('\\n'+'ANALYZED ATTRIBUTE NAME:', name)\n",
+    "        # counting records\n",
+    "        print('--COUNT OF RECORDS:', df[name].size)\n",
+    "        # counting missing values\n",
+    "        print('-- COUNT OF MISSING VALUES:', sum(df[name].isnull().values.ravel()))\n",
+    "        print('-- RATIO OF MISSING VALUES:', (sum(df[name].isnull().values.ravel()) / df[name].size) * 100, '%')\n",
+    "        # counting unique values\n",
+    "        print('-- CARDINALITY=COUNT OF UNIQUE VALUES:', df[name].unique().size)\n",
+    "        \n",
+    "    # finding null values in the DataFrame\n",
+    "    print('The sum of null values are:')\n",
+    "    print(df.isnull().sum())\n",
+    "        \n",
+    "    # Remove Null values\n",
+    "    print('Count of cells BEFORE dropping empty cells:', df.size, '\\n')\n",
+    "    df.dropna(inplace=True)\n",
+    "    df.to_csv(file_path, index=False)\n",
+    "    print('Count of cells AFTER dropping empty cells:', df.size, '\\n')\n",
+    "    print('------------------------------------------------------------------')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "1930c3dc-89c7-4535-84cd-073198a0260e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Information about File: data_processed/modelling_data.csv\n",
+      "                                             name  stem_percent  total_cost  \\\n",
+      "0                          Adams State University           3.0       72888   \n",
+      "1                        Alabama State University          16.0       65960   \n",
+      "2  Albany College of Pharmacy and Health Sciences           2.0      184100   \n",
+      "3                         Albertus Magnus College           2.0      181040   \n",
+      "4                                  Albion College          23.0      232620   \n",
+      "\n",
+      "   rank  diversity_percent  mid_career_pay  makes_six_figures  \n",
+      "0  16.0           0.384591         81400.0              False  \n",
+      "1  20.0           0.924986         71500.0              False  \n",
+      "2   1.0           0.238004        144800.0               True  \n",
+      "3  18.0           0.494839         85900.0              False  \n",
+      "4   7.0           0.120662         99300.0              False  \n",
+      "name                  object\n",
+      "stem_percent         float64\n",
+      "total_cost             int64\n",
+      "rank                 float64\n",
+      "diversity_percent    float64\n",
+      "mid_career_pay       float64\n",
+      "makes_six_figures       bool\n",
+      "dtype: object\n",
+      "\n",
+      "ANALYZED ATTRIBUTE NAME: name\n",
+      "--COUNT OF RECORDS: 571\n",
+      "-- COUNT OF MISSING VALUES: 0\n",
+      "-- RATIO OF MISSING VALUES: 0.0 %\n",
+      "-- CARDINALITY=COUNT OF UNIQUE VALUES: 571\n",
+      "\n",
+      "ANALYZED ATTRIBUTE NAME: stem_percent\n",
+      "--COUNT OF RECORDS: 571\n",
+      "-- COUNT OF MISSING VALUES: 0\n",
+      "-- RATIO OF MISSING VALUES: 0.0 %\n",
+      "-- CARDINALITY=COUNT OF UNIQUE VALUES: 67\n",
+      "\n",
+      "ANALYZED ATTRIBUTE NAME: total_cost\n",
+      "--COUNT OF RECORDS: 571\n",
+      "-- COUNT OF MISSING VALUES: 0\n",
+      "-- RATIO OF MISSING VALUES: 0.0 %\n",
+      "-- CARDINALITY=COUNT OF UNIQUE VALUES: 568\n",
+      "\n",
+      "ANALYZED ATTRIBUTE NAME: rank\n",
+      "--COUNT OF RECORDS: 571\n",
+      "-- COUNT OF MISSING VALUES: 0\n",
+      "-- RATIO OF MISSING VALUES: 0.0 %\n",
+      "-- CARDINALITY=COUNT OF UNIQUE VALUES: 25\n",
+      "\n",
+      "ANALYZED ATTRIBUTE NAME: diversity_percent\n",
+      "--COUNT OF RECORDS: 571\n",
+      "-- COUNT OF MISSING VALUES: 0\n",
+      "-- RATIO OF MISSING VALUES: 0.0 %\n",
+      "-- CARDINALITY=COUNT OF UNIQUE VALUES: 571\n",
+      "\n",
+      "ANALYZED ATTRIBUTE NAME: mid_career_pay\n",
+      "--COUNT OF RECORDS: 571\n",
+      "-- COUNT OF MISSING VALUES: 0\n",
+      "-- RATIO OF MISSING VALUES: 0.0 %\n",
+      "-- CARDINALITY=COUNT OF UNIQUE VALUES: 337\n",
+      "\n",
+      "ANALYZED ATTRIBUTE NAME: makes_six_figures\n",
+      "--COUNT OF RECORDS: 571\n",
+      "-- COUNT OF MISSING VALUES: 0\n",
+      "-- RATIO OF MISSING VALUES: 0.0 %\n",
+      "-- CARDINALITY=COUNT OF UNIQUE VALUES: 2\n",
+      "The sum of null values are:\n",
+      "name                 0\n",
+      "stem_percent         0\n",
+      "total_cost           0\n",
+      "rank                 0\n",
+      "diversity_percent    0\n",
+      "mid_career_pay       0\n",
+      "makes_six_figures    0\n",
+      "dtype: int64\n",
+      "Count of cells BEFORE dropping empty cells: 3997 \n",
+      "\n",
+      "Count of cells AFTER dropping empty cells: 3997 \n",
+      "\n",
+      "------------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_path = 'data_processed/modelling_data.csv'\n",
+    "removeNullValues(file_path)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3930addb-88a5-4c03-b132-122902fade38",
+   "id": "e92705b2-6bfb-4243-99dd-4c2e1a103aa7",
    "metadata": {},
    "outputs": [],
    "source": []
