--- a/scripts/preprocess_data_notebook.ipynb
+++ b/scripts/preprocess_data_notebook.ipynb
@@ -1206,8 +1206,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "e92705b2-6bfb-4243-99dd-4c2e1a103aa7",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data preprocessing is complete and modelling_data.csv is created to train\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('data preprocessing is complete and modelling_data.csv is created to train')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e86d4560-5957-479c-85f3-3e3755e0fd13",
    "metadata": {},
    "outputs": [],
    "source": []
