Updated tree files to have a depth of 8 to view each of the feature

--- a/src/decision_tree_module.ipynb
+++ b/src/decision_tree_module.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 1,
    "id": "7c130f5a-0774-4210-b1e3-a23b788a3529",
    "metadata": {},
    "outputs": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 6,
    "id": "14fbcb42-19ab-4537-bc77-4f4adc496899",
    "metadata": {},
    "outputs": [],
@@ -310,12 +310,15 @@
     "        count = 1\n",
     "        for data in bootstrap_data:\n",
     "            x_train_boot, y_train_boot = data['x_train'], data['y_train']\n",
-    "            dct = DecisionTreeClassifier(criterion='entropy', max_depth=3, random_state=0)\n",
+    "            dct = DecisionTreeClassifier(criterion='entropy', max_depth=8, random_state=0)\n",
     "            dct.fit(x_train_boot, y_train_boot)\n",
     "            decision_trees.append(dct)\n",
     "            # Build Tree\n",
-    "            export_graphviz(dct, out_file=f'{nameOfTree}{count}.dot')\n",
-    "            \n",
+    "            export_graphviz(dct, out_file=f'{nameOfTree}{count}.dot', feature_names=df.columns[1:5])\n",
+    "            # Assuming you have a RandomForestClassifier or similar model\n",
+    "            feature_importance = dct.feature_importances_\n",
+    "            print('Feature Importance: ', feature_importance)\n",
+    "\n",
     "            # Reading the 'tree.dot' file and rendering it\n",
     "            with open(f'{nameOfTree}{count}.dot') as file:\n",
     "                dot_graph = file.read()\n",
@@ -338,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 7,
    "id": "5390d407-a219-4dca-bd80-223c4a1f6518",
    "metadata": {
     "tags": []
@@ -348,6 +351,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Feature Importance:  [0.42935686 0.27236173 0.10511651 0.19316489]\n",
+      "Feature Importance:  [0.42935686 0.27236173 0.10511651 0.19316489]\n",
+      "Feature Importance:  [0.42935686 0.27236173 0.10511651 0.19316489]\n",
+      "Feature Importance:  [0.42935686 0.27236173 0.10511651 0.19316489]\n",
+      "Feature Importance:  [0.42935686 0.27236173 0.10511651 0.19316489]\n",
+      "Feature Importance:  [0.42935686 0.27236173 0.10511651 0.19316489]\n",
+      "Feature Importance:  [0.42935686 0.27236173 0.10511651 0.19316489]\n",
+      "Feature Importance:  [0.42935686 0.27236173 0.10511651 0.19316489]\n",
+      "Feature Importance:  [0.42935686 0.27236173 0.10511651 0.19316489]\n",
+      "Feature Importance:  [0.42935686 0.27236173 0.10511651 0.19316489]\n",
+      "Feature Importance:  [0.42935686 0.27236173 0.10511651 0.19316489]\n",
+      "Feature Importance:  [0.42935686 0.27236173 0.10511651 0.19316489]\n",
+      "Feature Importance:  [0.42935686 0.27236173 0.10511651 0.19316489]\n",
+      "Feature Importance:  [0.42935686 0.27236173 0.10511651 0.19316489]\n",
+      "Feature Importance:  [0.42935686 0.27236173 0.10511651 0.19316489]\n",
       "   stem_percent  total_cost  rank  diversity_percent\n",
       "0          11.0    235224.0  17.0           0.225472\n",
       "1          14.0     47608.0  11.0           0.425682\n",
@@ -387,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bef95c23-18bc-4dcd-99e3-e61e03bc811c",
+   "id": "5ebb500f-2dbe-4539-9504-4713feb8b18e",
    "metadata": {},
    "outputs": [],
    "source": []
