--- a/src/decision_tree_module.ipynb
+++ b/src/decision_tree_module.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "id": "7c130f5a-0774-4210-b1e3-a23b788a3529",
    "metadata": {},
    "outputs": [
@@ -24,8 +24,10 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.tree import export_graphviz\n",
     "from sklearn.utils import resample\n",
+    "from sklearn.metrics import accuracy_score\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "import subprocess\n",
     "from scipy.stats import zscore\n",
     "import graphviz\n",
     "import os\n",
@@ -280,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "id": "14fbcb42-19ab-4537-bc77-4f4adc496899",
    "metadata": {},
    "outputs": [],
@@ -292,12 +294,16 @@
     "    df['makes_six_figures'] = df['makes_six_figures'].map(class_mapping)\n",
     "    x, y = df.iloc[:, 1:5].values, df['makes_six_figures'].values\n",
     "    n_trees = 5 # number of decision trees\n",
+    "    name_of_tree = 'tree'\n",
+    "    count = 1\n",
+    "    decision_trees = []\n",
     "    bootstrap_data = []\n",
     "    for i in range(n_trees):\n",
     "        # create a bootstrap sample\n",
     "        x_boot, y_boot = resample(x, y, replace=True, random_state=0)\n",
     "        # create training and testing sets for each bootstrap sample\n",
-    "        x_train_boot, x_test_boot, y_train_boot, y_test_boot = train_test_split(x_boot, y_boot, test_size=0.33, random_state=0)\n",
+    "        x_train_boot, x_test_boot, y_train_boot, y_test_boot = train_test_split(x_boot, y_boot, test_size=0.33, random_state=i)\n",
+    "                                                                                                                    \n",
     "        # store the data in a list\n",
     "        bootstrap_data.append({\n",
     "            'x_train': x_train_boot,\n",
@@ -305,43 +311,52 @@
     "            'y_train': y_train_boot, \n",
     "            'y_test': y_test_boot \n",
     "        })\n",
-    "        decision_trees = []\n",
-    "        nameOfTree = 'new_tree'\n",
-    "        count = 1\n",
-    "        for data in bootstrap_data:\n",
-    "            x_train_boot, y_train_boot = data['x_train'], data['y_train']\n",
-    "            dct = DecisionTreeClassifier(criterion='entropy', max_depth=8, random_state=0)\n",
-    "            dct.fit(x_train_boot, y_train_boot)\n",
-    "            decision_trees.append(dct)\n",
-    "            # Build Tree\n",
-    "            export_graphviz(dct, out_file=f'{nameOfTree}{count}.dot', feature_names=df.columns[1:5])\n",
-    "            # Assuming you have a RandomForestClassifier or similar model\n",
-    "            feature_importance = dct.feature_importances_\n",
-    "            print('Feature Importance: ', feature_importance)\n",
-    "\n",
-    "            # Reading the 'tree.dot' file and rendering it\n",
-    "            with open(f'{nameOfTree}{count}.dot') as file:\n",
-    "                dot_graph = file.read()\n",
-    "                graphviz.Source(dot_graph)\n",
-    "            count += 1\n",
     "        \n",
-    "    df1 = pd.DataFrame(data=x_train_boot, columns=df.columns[1:5])\n",
-    "    print(df1.head())\n",
-    "    print(df1.shape)\n",
-    "    df2 = pd.DataFrame(data=y_train_boot, columns=['makes_six_figures'])\n",
-    "    print(df2.head())\n",
-    "    print(df2.shape)\n",
-    "    df3 = pd.DataFrame(data=x_test_boot, columns=df.columns[1:5])\n",
-    "    print(df3.head())\n",
-    "    print(df3.shape)\n",
-    "    df4 = pd.DataFrame(data=y_test_boot, columns=['makes_six_figures'])\n",
-    "    print(df4.head())\n",
-    "    print(df4.shape)"
+    "    for data in bootstrap_data:\n",
+    "        print(f'--------------------Tree {count}--------------------')\n",
+    "        x_train_boot, y_train_boot = data['x_train'], data['y_train']\n",
+    "        dct = DecisionTreeClassifier(criterion='entropy', max_depth=8, random_state=0)\n",
+    "        dct.fit(x_train_boot, y_train_boot)\n",
+    "        decision_trees.append(dct)\n",
+    "        # Build Tree\n",
+    "        export_graphviz(dct, out_file=f'{name_of_tree}{count}.dot', feature_names=df.columns[1:5])\n",
+    "        # Assuming you have a RandomForestClassifier or similar model\n",
+    "        feature_importance = dct.feature_importances_\n",
+    "        print('Feature Importance: ', feature_importance)\n",
+    "\n",
+    "        # Reading the 'tree.dot' file and rendering it\n",
+    "        with open(f'{name_of_tree}{count}.dot') as file:\n",
+    "            dot_graph = file.read()\n",
+    "            graphviz.Source(dot_graph)\n",
+    "            \n",
+    "        # collect assessment stats\n",
+    "        y_pred = dct.predict(x_test_boot)\n",
+    "        accuracy = accuracy_score(y_test_boot, y_pred)\n",
+    "        print('Accuracy for Tree {}: {:.2f}'.format(count, accuracy))\n",
+    "    \n",
+    "        \n",
+    "        df1 = pd.DataFrame(data=x_train_boot, columns=df.columns[1:5])\n",
+    "        print(df1.head())\n",
+    "        print(df1.shape)\n",
+    "        df2 = pd.DataFrame(data=y_train_boot, columns=['makes_six_figures'])\n",
+    "        print(df2.head())\n",
+    "        print(df2.shape)\n",
+    "        df3 = pd.DataFrame(data=x_test_boot, columns=df.columns[1:5])\n",
+    "        print(df3.head())\n",
+    "        print(df3.shape)\n",
+    "        df4 = pd.DataFrame(data=y_test_boot, columns=['makes_six_figures'])\n",
+    "        print(df4.head())\n",
+    "        print(df4.shape)\n",
+    "        \n",
+    "        count += 1\n",
+    "    \n",
+    "    # Return Trained Decision Trees\n",
+    "    return decision_trees"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "id": "5390d407-a219-4dca-bd80-223c4a1f6518",
    "metadata": {
     "tags": []
@@ -351,21 +366,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "--------------------Tree 1--------------------\n",
       "Feature Importance:  [0.42935686 0.27236173 0.10511651 0.19316489]\n",
-      "Feature Importance:  [0.42935686 0.27236173 0.10511651 0.19316489]\n",
-      "Feature Importance:  [0.42935686 0.27236173 0.10511651 0.19316489]\n",
-      "Feature Importance:  [0.42935686 0.27236173 0.10511651 0.19316489]\n",
-      "Feature Importance:  [0.42935686 0.27236173 0.10511651 0.19316489]\n",
-      "Feature Importance:  [0.42935686 0.27236173 0.10511651 0.19316489]\n",
-      "Feature Importance:  [0.42935686 0.27236173 0.10511651 0.19316489]\n",
-      "Feature Importance:  [0.42935686 0.27236173 0.10511651 0.19316489]\n",
-      "Feature Importance:  [0.42935686 0.27236173 0.10511651 0.19316489]\n",
-      "Feature Importance:  [0.42935686 0.27236173 0.10511651 0.19316489]\n",
-      "Feature Importance:  [0.42935686 0.27236173 0.10511651 0.19316489]\n",
-      "Feature Importance:  [0.42935686 0.27236173 0.10511651 0.19316489]\n",
-      "Feature Importance:  [0.42935686 0.27236173 0.10511651 0.19316489]\n",
-      "Feature Importance:  [0.42935686 0.27236173 0.10511651 0.19316489]\n",
-      "Feature Importance:  [0.42935686 0.27236173 0.10511651 0.19316489]\n",
+      "Accuracy for Tree 1: 0.98\n",
       "   stem_percent  total_cost  rank  diversity_percent\n",
       "0          11.0    235224.0  17.0           0.225472\n",
       "1          14.0     47608.0  11.0           0.425682\n",
@@ -381,11 +384,11 @@
       "4                  1\n",
       "(382, 1)\n",
       "   stem_percent  total_cost  rank  diversity_percent\n",
-      "0          11.0    217800.0   3.0           0.131061\n",
-      "1          11.0    156200.0   6.0           0.224302\n",
-      "2           2.0    117760.0  21.0           0.501949\n",
-      "3          12.0     72192.0   4.0           0.141054\n",
-      "4          25.0    237172.0   2.0           0.195716\n",
+      "0          14.0     99664.0  17.0           0.215245\n",
+      "1          13.0    149984.0  10.0           0.207078\n",
+      "2           6.0     95564.0  15.0           0.312164\n",
+      "3          31.0    186840.0  13.0           0.424774\n",
+      "4          14.0     47608.0  11.0           0.425682\n",
       "(189, 4)\n",
       "   makes_six_figures\n",
       "0                  0\n",
@@ -393,22 +396,148 @@
       "2                  0\n",
       "3                  0\n",
       "4                  0\n",
-      "(189, 1)\n"
+      "(189, 1)\n",
+      "--------------------Tree 2--------------------\n",
+      "Feature Importance:  [0.25097209 0.52603838 0.102232   0.12075753]\n",
+      "Accuracy for Tree 2: 0.97\n",
+      "   stem_percent  total_cost  rank  diversity_percent\n",
+      "0           8.0    118480.0  21.0           0.142549\n",
+      "1           6.0     91412.0  16.0           0.182734\n",
+      "2          10.0     76704.0   1.0           0.211115\n",
+      "3           8.0     90096.0  17.0           0.157808\n",
+      "4          32.0    284664.0  10.0           0.434710\n",
+      "(382, 4)\n",
+      "   makes_six_figures\n",
+      "0                  0\n",
+      "1                  0\n",
+      "2                  1\n",
+      "3                  0\n",
+      "4                  1\n",
+      "(382, 1)\n",
+      "   stem_percent  total_cost  rank  diversity_percent\n",
+      "0          14.0     99664.0  17.0           0.215245\n",
+      "1          13.0    149984.0  10.0           0.207078\n",
+      "2           6.0     95564.0  15.0           0.312164\n",
+      "3          31.0    186840.0  13.0           0.424774\n",
+      "4          14.0     47608.0  11.0           0.425682\n",
+      "(189, 4)\n",
+      "   makes_six_figures\n",
+      "0                  0\n",
+      "1                  0\n",
+      "2                  0\n",
+      "3                  0\n",
+      "4                  0\n",
+      "(189, 1)\n",
+      "--------------------Tree 3--------------------\n",
+      "Feature Importance:  [0.4422713  0.3032422  0.11452367 0.13996283]\n",
+      "Accuracy for Tree 3: 0.98\n",
+      "   stem_percent  total_cost  rank  diversity_percent\n",
+      "0          25.0    181464.0   3.0           0.102778\n",
+      "1          22.0     75596.0   5.0           0.337754\n",
+      "2           5.0     74876.0  23.0           0.156310\n",
+      "3           5.0    135992.0  14.0           0.212970\n",
+      "4          16.0     81756.0   3.0           0.144978\n",
+      "(382, 4)\n",
+      "   makes_six_figures\n",
+      "0                  0\n",
+      "1                  0\n",
+      "2                  0\n",
+      "3                  0\n",
+      "4                  0\n",
+      "(382, 1)\n",
+      "   stem_percent  total_cost  rank  diversity_percent\n",
+      "0          14.0     99664.0  17.0           0.215245\n",
+      "1          13.0    149984.0  10.0           0.207078\n",
+      "2           6.0     95564.0  15.0           0.312164\n",
+      "3          31.0    186840.0  13.0           0.424774\n",
+      "4          14.0     47608.0  11.0           0.425682\n",
+      "(189, 4)\n",
+      "   makes_six_figures\n",
+      "0                  0\n",
+      "1                  0\n",
+      "2                  0\n",
+      "3                  0\n",
+      "4                  0\n",
+      "(189, 1)\n",
+      "--------------------Tree 4--------------------\n",
+      "Feature Importance:  [0.39138798 0.39612436 0.0719226  0.14056506]\n",
+      "Accuracy for Tree 4: 0.97\n",
+      "   stem_percent  total_cost  rank  diversity_percent\n",
+      "0          11.0     67176.0  11.0           0.277489\n",
+      "1          18.0    177280.0  14.0           0.135166\n",
+      "2          97.0    271548.0   3.0           0.386148\n",
+      "3           2.0    117760.0  21.0           0.501949\n",
+      "4           8.0     55608.0  25.0           0.165479\n",
+      "(382, 4)\n",
+      "   makes_six_figures\n",
+      "0                  0\n",
+      "1                  0\n",
+      "2                  1\n",
+      "3                  0\n",
+      "4                  0\n",
+      "(382, 1)\n",
+      "   stem_percent  total_cost  rank  diversity_percent\n",
+      "0          14.0     99664.0  17.0           0.215245\n",
+      "1          13.0    149984.0  10.0           0.207078\n",
+      "2           6.0     95564.0  15.0           0.312164\n",
+      "3          31.0    186840.0  13.0           0.424774\n",
+      "4          14.0     47608.0  11.0           0.425682\n",
+      "(189, 4)\n",
+      "   makes_six_figures\n",
+      "0                  0\n",
+      "1                  0\n",
+      "2                  0\n",
+      "3                  0\n",
+      "4                  0\n",
+      "(189, 1)\n",
+      "--------------------Tree 5--------------------\n",
+      "Feature Importance:  [0.25822708 0.42062033 0.10639688 0.21475571]\n",
+      "Accuracy for Tree 5: 0.94\n",
+      "   stem_percent  total_cost  rank  diversity_percent\n",
+      "0          19.0    289028.0  19.0           0.371551\n",
+      "1          14.0     87888.0  24.0           0.149148\n",
+      "2           5.0     74876.0  23.0           0.156310\n",
+      "3          10.0    188780.0  11.0           0.529954\n",
+      "4          29.0     66004.0   4.0           0.328838\n",
+      "(382, 4)\n",
+      "   makes_six_figures\n",
+      "0                  1\n",
+      "1                  0\n",
+      "2                  0\n",
+      "3                  0\n",
+      "4                  1\n",
+      "(382, 1)\n",
+      "   stem_percent  total_cost  rank  diversity_percent\n",
+      "0          14.0     99664.0  17.0           0.215245\n",
+      "1          13.0    149984.0  10.0           0.207078\n",
+      "2           6.0     95564.0  15.0           0.312164\n",
+      "3          31.0    186840.0  13.0           0.424774\n",
+      "4          14.0     47608.0  11.0           0.425682\n",
+      "(189, 4)\n",
+      "   makes_six_figures\n",
+      "0                  0\n",
+      "1                  0\n",
+      "2                  0\n",
+      "3                  0\n",
+      "4                  0\n",
+      "(189, 1)\n",
+      "Trained Decision Trees: [DecisionTreeClassifier(criterion='entropy', max_depth=8, random_state=0), DecisionTreeClassifier(criterion='entropy', max_depth=8, random_state=0), DecisionTreeClassifier(criterion='entropy', max_depth=8, random_state=0), DecisionTreeClassifier(criterion='entropy', max_depth=8, random_state=0), DecisionTreeClassifier(criterion='entropy', max_depth=8, random_state=0)]\n"
      ]
     }
    ],
    "source": [
     "file_path = 'data_processed/modelling_data.csv'\n",
-    "bootstrapTesting(file_path)"
+    "trained_decision_trees = bootstrapTesting(file_path)\n",
+    "print(f'Trained Decision Trees: {trained_decision_trees}')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5ebb500f-2dbe-4539-9504-4713feb8b18e",
+   "cell_type": "markdown",
+   "id": "dc0f1e32-d647-423c-9e36-7aba817992cb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Turn dot files in png images "
+   ]
   }
  ],
  "metadata": {
